<resources>
    <string name="app_name">Horizon</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="sign_in">Sign in</string>
    <string name="register_here">Register here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online_consultation">Online Consultation</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="chat_with_doctor">Chat with Doctor</string>
    <string name="video_consultation">Video Consultation</string>
    <string name="my_appointments">My Appointments</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="welcome_how_can_i_assist_you">Welcome, How can I assist you?</string>
    <string name="back">Back</string>
    <string name="list_of_available_doctors">List of available Doctors</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="list_of_departments">List of Departments</string>
    <string name="department">Department</string>
    <string name="name">Name</string>
    <string name="patient_age">Patient Age:</string>
    <string name="patient_name">Patient Name:</string>
    <string name="select_date">Select Date:</string>
    <string name="schedule_your_appointment">Schedule Your Appointment</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="display_checkmark">Display Checkmark</string>
    <string-array name="time_slots">
        <item>9:00am - 10:00am</item>
        <item>10:00am - 11:00am</item>
        <item>11:00am - 12:00pm</item>
        <item>12:00pm - 1:00pm</item>
        <item>3:00pm - 4:00pm</item>
    </string-array>


</resources>