<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/first_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/first_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:translationX="130dp"
        android:translationY="160dp" />

    <TextView
        android:id="@+id/last_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/last_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:translationX="130dp"
        android:translationY="190dp" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="20sp"
        android:translationX="150dp"
        android:translationY="220dp" />

    <TextView
        android:id="@+id/phone_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="20sp"
        android:translationX="147dp"
        android:translationY="250dp" />

</LinearLayout>